Fix notice line height, prevent svg from shrinking on mobile sizing

--- a/source/_scss/compounds/_notice.scss
+++ b/source/_scss/compounds/_notice.scss
@@ -9,9 +9,8 @@ $notice_img_size: 1.5rem;
 
 .notice {
   padding: 1rem;
-  font-size: 14px;
   margin: 0 auto;
-  color: #582900;
+  color: $colour_secondary-dark;
   display: flex;
   flex-flow: row;
   align-items: center;
@@ -27,13 +26,15 @@ $notice_img_size: 1.5rem;
     color: inherit;
   }
 
-  h2 {
+  h2, p {
     font-size: 14px;
-    margin-bottom: 4px;
+    line-height: 1.2em;
+    color: $colour_secondary-dark;
+    max-width: 100%; //Overide global paragraph width
   }
 
-  p {
-    max-width: 100%; //Overide global paragraph width
+  h2 {
+    margin-bottom: 4px;
   }
 
   .n_content {
@@ -56,6 +57,7 @@ $notice_img_size: 1.5rem;
       fill: currentColor;
       width: $notice_img_size;
       height: $notice_img_size;
+      min-width: $notice_img_size;
     }
   }
 
